# probabilistic-ai-incident-commander

./: .env.example  .gitignore  CONTRIBUTING.md  FILE_MANIFEST.txt  LICENSE  MANIFEST.in  Makefile  README.md  SHA256SUMS  pyproject.toml
.github/: phase11-mypy.txt  pull_request_template.md  reader-lint-output.txt
data/: README.md
docs/: ANALYTICS_METRIC_LAYER.md  ANOMALY_DETECTION.md  ARCHITECTURE.md  CODEX_PHASE_0_PROMPT.md  CONTROLLED_REMEDIATION.md  CURRENT_STATUS.md  CUSTOMER_IMPACT.md  DATA_DICTIONARY.md  DECISIONS.md  DEVELOPMENT_ROADMAP.md  EVALUATION.md  EVALUATION_CONTRACT.md  FINAL_CROSS_PHASE_AUDIT.md  GOVERNED_TOOL_GATEWAY.md  HANDOFF.md  METRIC_CATALOG.md  OPERATIONAL_EVIDENCE.md  PHASE10_HARDENING.md  PHASE11_RELIABILITY_HARDENING.md  PHASE_0_ACCEPTANCE.md  PHASE_0_BUILD_REPORT.md  PROBABILISTIC_AGENTIC_INVESTIGATION.md  PROJECT_VISION.md  QUALITY_GATES.md  RECOVERY_VERIFICATION.md  SECURITY_MODEL.md  SYNTHETIC_COMMERCE_ENVIRONMENT.md  TERMINAL_USER_INTERFACE.md
examples/: build_customer_impact.py  build_operational_evidence.py  build_recovery_smoke_inputs.py  build_remediation_smoke_inputs.py  build_scripted_investigation_inputs.py  generate_dataset.py  run_probabilistic_investigation.py
schemas/: analytics-config.schema.json  analytics-manifest.schema.json  dataset-manifest.schema.json  detection-config.schema.json  detection-manifest.schema.json  evaluation-adversarial-case.schema.json  evaluation-adversarial-result.schema.json  evaluation-comparison.schema.json  evaluation-config.schema.json  evaluation-run.schema.json  evaluation.schema.json  evidence-config.schema.json  evidence-manifest.schema.json  impact-config.schema.json  impact-manifest.schema.json  incident.schema.json  investigation-config.schema.json  investigation-evaluation-case.schema.json  investigation-manifest.schema.json  investigation-report.schema.json  investigation-request.schema.json  project.schema.json  recovery-artifact-manifest.schema.json  recovery-config.schema.json  recovery-lifecycle-event.schema.json  recovery-lifecycle-state.schema.json  recovery-observation-artifact-manifest.schema.json  recovery-observation-set.schema.json  recovery-report.schema.json  remediation-approval-decision.schema.json  remediation-artifact-manifest.schema.json  remediation-config.schema.json  remediation-control-state.schema.json  remediation-execution-receipt.schema.json  remediation-execution-request.schema.json  remediation-plan.schema.json  remediation-proposal.schema.json  safety.schema.json  simulation-config.schema.json  tool-error.schema.json  (+2 more)
scripts/: assert_phase11_smoke.py  phase11_authoritative_soak.py  validate_phase11_evidence.py
specs/: evaluation.yaml  project.yaml  safety.yaml
tests/: conftest.py  test_analytics_cli.py  test_analytics_config.py  test_analytics_contribution.py  test_analytics_funnel.py  test_analytics_io.py  test_analytics_metrics.py  test_analytics_models.py  test_analytics_quality.py  test_artifact_lease.py  test_atomic_publication.py  test_cli.py  test_contract_loading.py  test_contract_validation.py  test_detection_cli.py  test_detection_config.py  (+49 more)
(+179 files in other folders)
