[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probabilistic-ai-incident-commander"
version = "0.1.0"
description = "Machine-readable contracts and implementation for a probabilistic AI incident commander."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Probabilistic AI Incident Commander contributors" }]
dependencies = [
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.14,<2",
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
paic-contract = "paic.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["paic"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["paic"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]
